--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <title>...</title>
     <link rel="stylesheet href=style.css"/>
   </head>
-   
+  <p>Do you see changes?</p>
   <body>
   </body>
 </html>
