--- a/index.html
+++ b/index.html
@@ -1,10 +1,34 @@
 <DOCTYPE html>
 <html>
   <head>
-    <title>...</title>
-    <link rel="stylesheet href=style.css"/>
-  </head>
-  <p>Do you see changes?</p>
+    <title>Miriam Snyder</title>
+    <link rel="stylesheet" href="style.css">
+    <h4 class="contact-information"> Phone: (651) 485-9715(c) | Address: 7344 Lyndale Ave South, Richfield, MN 55423 | Email: miriam.snyder@gmail.com<h3>
+    <a class="contact-photo" href="https://ibb.co/fYzQy6C"><img src="https://i.ibb.co/8DLXfvj/Miriam.jpg" alt="Miriam Snyder"></a>
+  </head>                                        
   <body>
+    <h1 class="work experience">Work Experience</h1>
+      <h2 class="Employer">Allina Health></h2>
+      <h3 class="job title">Business Analyst></h3> 
+      <h3 class="dates">May 2018-Current</h3>
+      <ul class="job roles">
+        <li></li>
+        <li></li>
+        <li></li>
+        </li></li>
+      </ul>
+    <h2 class="Employer">Minnesota Gastroenterology></h2>
+      <h3 class="job title">Research Coordinator></h3> 
+      <h3 class="dates">June 2016-April 2018</h3>
+      <ul class="job roles">
+        <li>Coordinate Phase II-IV clinical trials for pharmaceutical companies and medical device manufactuers</li>
+        <li>Prepare and maintain study-related regulatory documents</li>
+        <li>Ensure complaince with sponsor protocols, IRB requiremens and state/federal regulations</li>
+        <li>Conduct patient recruitement and enrollment, patient study visits, collection and maintence of study data and adverse event reporting</li>
+        <li>Reponsible for drug accountability and reconciliation</li>
+        <li> Execute collection , processing, handling and shipping of specimens</li>
+     </ul>
+
+  
   </body>
 </html>
