--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <DOCTYPE html>
 <html>
   <head>
-    <title>Miriam Snyder</title>
+    <title>Miriam Snyder Resume</title>
+    <header>Miriam Snyder</header>
     <hr/>
     <link rel="stylesheet" href="style.css">
     <h4 class="contact-information"> Phone: (651) 485-9715(c) | Address: 7344 Lyndale Ave South, Richfield, MN 55423 | Email: miriam.snyder@gmail.com<h3>
@@ -32,7 +33,7 @@
         <li>Reponsible for drug accountability and reconciliation</li>
         <li> Execute collection , processing, handling and shipping of specimens</li>
      </ul>
-    <h2 class="Employer">Epic Systems Corporation></h2>
+    <h2 class="Employer">Epic Systems Corporation</h2>
       <hr/>
       <h3 class="job title">Project Manager/Implementation Services</h3> 
       <h3 class="dates">May 2015-May 2016</h3>
