Adding in more updating

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <title>Miriam Snyder Resume</title>
-    <h1>Miriam Snyder</h1>
+    <h1 class=page-title>Miriam Snyder</h1>
     <hr/>
     <link rel="stylesheet" href="style.css">
     <h4 class="contact-information"> Phone: (651) 485-9715(c) | Address: 7344 Lyndale Ave South, Richfield, MN 55423 | Email: miriam.snyder@gmail.com<h3>
