--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <h1 class=page-title>Miriam Snyder</h1>
     <hr/>
     <link rel="stylesheet" href="style.css">
-    <h4 class="contact-information"> Phone: (651) 485-9715(c) | Address: 7344 Lyndale Ave South, Richfield, MN 55423 | Email: miriam.snyder@gmail.com<h3>
+    <p class="contact-information"> Phone: (651) 485-9715(c) | Address: 7344 Lyndale Ave South, Richfield, MN 55423 | Email: miriam.snyder@gmail.com<p>
     <a class="contact-photo" href="https://ibb.co/fYzQy6C"><img src="https://i.ibb.co/8DLXfvj/Miriam.jpg" alt="Miriam Snyder"></a>
   </head>                                        
   <body>
