--- a/index.html
+++ b/index.html
@@ -2,30 +2,32 @@
 <html>
   <head>
     <title>Miriam Snyder Resume</title>
-    <h1 class=page-title>Miriam Snyder</h1>
-    <hr/>
     <link rel="stylesheet" href="style.css">
-    <p class="contact-information"> Phone: (651) 485-9715(c) | Address: 7344 Lyndale Ave South, Richfield, MN 55423 | Email: miriam.snyder@gmail.com<p>
-    <a class="contact-photo" href="https://ibb.co/fYzQy6C"><img src="https://i.ibb.co/8DLXfvj/Miriam.jpg" alt="Miriam Snyder"></a>
-  </head>                                        
+  </head> 
   <body>
+    <div class="header">
+       <a href="https://ibb.co/fYzQy6C"><img src="https://i.ibb.co/8DLXfvj/Miriam.jpg" alt="Miriam Snyder"></a>
+      <h1 id="page-title">Miriam Snyder</h1>
+      <p id="contact-information"> Phone: (651) 485-9715(c) | Address: 7344 Lyndale Ave South, Richfield, MN 55423 | Email: miriam.snyder@gmail.com<p>
+      <hr/>
+    </div>
     <div>
-    <h1 class="work experience">Work Experience</h1>
+    <h1 class="work-experience">Work Experience</h1>
       <h2 class="Employer">Allina Health</h2>
       <hr/>
-      <h3 class="job title">Business Analyst</h3> 
+      <h3 class="job-title">Business Analyst</h3> 
       <h3 class="dates">May 2018-Current</h3>
-      <ul class="job roles">
+      <ul class="job-roles">
         <li></li>
         <li></li>
         <li></li>
         </li></li>
       </ul>
     <h2 class="Employer">Minnesota Gastroenterology</h2>
-      <h3 class="job title">Research Coordinator</h3> 
       <hr/>
+      <h3 class="job-title">Research Coordinator</h3> 
       <h3 class="dates">June 2016-April 2018</h3>
-      <ul class="job roles">
+      <ul class="job-roles">
         <li>Coordinate Phase II-IV clinical trials for pharmaceutical companies and medical device manufactuers</li>
         <li>Prepare and maintain study-related regulatory documents</li>
         <li>Ensure complaince with sponsor protocols, IRB requiremens and state/federal regulations</li>
@@ -35,9 +37,9 @@
      </ul>
     <h2 class="Employer">Epic Systems Corporation</h2>
       <hr/>
-      <h3 class="job title">Project Manager/Implementation Services</h3> 
+      <h3 class="job-title">Project Manager/Implementation Services</h3> 
       <h3 class="dates">May 2015-May 2016</h3>
-      <ul class="job roles">
+      <ul class="job-roles">
         <li>Spearheaded the implementation of EPic's electronic health record software (EHR) for two expansive Home Health and Hospice agencies with multiple unique service lines, including pediatrics, mom and baby programs, infusion and telemonitioring services</li>
         <li>Managed the day-to day work of 5-6 analysts per agency</li>
         <li>Quickly and effectively researched issues and relayed solutions to team members</li>
@@ -47,15 +49,15 @@
     </ul>
       <h2 class="Employer">PharmaSeek Financial Services</h2>
        <hr/>
-      <h3 class="job title">Lead Clinical Trial Coverage Analyst</h3> 
+      <h3 class="job-title">Lead Clinical Trial Coverage Analyst</h3> 
       <h3 class="dates">August 2014-May 2015</h3>
-      <ul class="job roles">
+      <ul class="job-roles">
         <li>Analyzed clinical research protocols and interpreted Medicare and National Coverage Decisions (NCDs) to determine the correct billing of medical items and procedures</li>
         <li>Maganaged 3 customer relationships, including a large hospital organization, and worked with several more clients</li>
         <li>Consulted on clinical research protocols with study teams and lead physicians to determine standard of care practices </li>
         <li>Excecuted simple CPT/HCPCS coding for items and procedures conducted in clinical trials</li>
         <li>Composed and negotiated clinical research budgets and contracts with clinical research sponsors in order to uphold the best interest and well-being of the medical site and patient</li>
       </ul>
-    </div>   
+    </div>
   </body>
 </html>
