--- a/index.html
+++ b/index.html
@@ -18,10 +18,11 @@
       <h3 class="job-title">Business Analyst</h3> 
       <h3 class="dates">May 2018-Current</h3>
       <ul class="job-roles">
-        <li></li>
-        <li></li>
-        <li></li>
-        </li></li>
+        <li>Implementation and Support of Epic-EpicCare Ambulatory application</li>
+        <li>Identify, define, document clinical processes in need of improvement/implementation</li>
+        <li>Elicit requirements from key stakeholders</li>
+        <li>Complete analysis to recommend optimization of features and function of systems</li>
+        <li>User support (remote or on-site)</li>
       </ul>
     <h2 class="Employer">Minnesota Gastroenterology</h2>
       <hr/>
@@ -33,7 +34,7 @@
         <li>Ensure complaince with sponsor protocols, IRB requiremens and state/federal regulations</li>
         <li>Conduct patient recruitement and enrollment, patient study visits, collection and maintence of study data and adverse event reporting</li>
         <li>Reponsible for drug accountability and reconciliation</li>
-        <li> Execute collection , processing, handling and shipping of specimens</li>
+        <li> Execute collection, processing, handling and shipping of specimens</li>
      </ul>
     <h2 class="Employer">Epic Systems Corporation</h2>
       <hr/>
