--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       <h3 class="job-title">Business Analyst</h3> 
       <h3 class="dates">May 2018-Current</h3>
       <ul class="job-roles">
-        <li>Implementation and Support of Epic-EpicCare Ambulatory application</li>
+        <li>Implementation and support of Epic-EpicCare Ambulatory application</li>
         <li>Identify, define, document clinical processes in need of improvement/implementation</li>
         <li>Elicit requirements from key stakeholders</li>
         <li>Complete analysis to recommend optimization of features and function of systems</li>
