--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
       <h3 class="job-title">Research Coordinator</h3> 
       <h3 class="dates">June 2016-April 2018</h3>
       <ul class="job-roles">
-        <li>Coordinate Phase II-IV clinical trials for pharmaceutical companies and medical device manufactuers</li>
+        <li>Coordinate phase II-IV clinical trials for pharmaceutical companies and medical device manufactuers</li>
         <li>Prepare and maintain study-related regulatory documents</li>
         <li>Ensure complaince with sponsor protocols, IRB requiremens and state/federal regulations</li>
         <li>Conduct patient recruitement and enrollment, patient study visits, collection and maintence of study data and adverse event reporting</li>
