--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <h1 class="work-experience">Work Experience</h1>
       <h2 class="Employer">Allina Health</h2>
       <hr/>
-      <h3 class="job-title">Business Analyst</h3> 
+      <h3 class="job-title">Business Analyst-Intermediate</h3> 
       <h3 class="dates">May 2018-Current</h3>
       <ul class="job-roles">
         <li>Implementation and support of Epic-EpicCare Ambulatory application</li>
